--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Etch-a-Sketch</title>
     <link rel="stylesheet" href="./style.css" />
-</head>
-<body>
-    <div id="container">
-        
+  </head>
+  <body>
+    <h1>Etch-a-Sketch</h1>
+    <div id="header"><button id="set-grid" class="button-50">Set Grid</button></div>
+    <div id="main">
+      <div id="mid-container"></div>
     </div>
     <script src="./script.js"></script>
-</body>
+  </body>
 </html>
